@@ -1,3 +1,8 @@
+2006-10-03  Inge Wallin  <inge@lysator.liu.se>
+
+	* kchart_params.cc (loadOasisPlotarea): Fix bug.  Pie charts use
+	only the y axis, not only the x axis.
+
 2006-09-28  Inge Wallin  <inge@lysator.liu.se>
 
 	* kchart_params.cc (loadOasisPlotarea): Add support for
